TEST_PROGRAMS/INVALID/07/struct_literal.go
package main

func main() {
	/* syntax.pdf */
	// A struct literal, not supported in GoLite
	var p point = point{ 1, 2, 3 }
}
